# mxlogger_analyzer_rust

./: .gitignore  Cargo.toml  FINAL_HOMEBREW_STEPS.md  HOMEBREW_RELEASE.md  HOMEBREW_STATUS.md  NEXT_STEP.md  QUICK_HOMEBREW_SETUP.md  README.md  README_zh.md  RELEASE_CHECKLIST.md  SIMPLIFIED_HOMEBREW.md  log_serialize.fbs
.github/workflows/: release.yml
Formula/: mxlogger-analyzer-rust.rb
scripts/: auto_create_tap.sh  install-windows.ps1  install.cmd  install.ps1  release.sh  setup_tap.sh  update_formula.sh
src/: log_serialize_generated.rs  main.rs
src/crypto/: mod.rs
src/decoder/: mod.rs
src/logger/: mod.rs
